minor change to microscopy use case

--- a/use-case-microscopy-scans.ipynb
+++ b/use-case-microscopy-scans.ipynb
@@ -27,8 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Connect to the denormalized scans database.\n",
-    "catalog = chisel.connect('https://dev.isrd.isi.edu/ermrest/catalog/62603')"
+    "# Connect to the denormalized scans database. (Authentication required)\n",
+    "catalog = chisel.connect('https://cirm-dev.isrd.isi.edu/ermrest/catalog/4')"
    ]
   },
   {
@@ -641,13 +641,13 @@
     {
      "data": {
       "text/markdown": [
-       "### Table \"None.Scans:f028b07282ab11e981c7320011066320\"\n",
+       "### Table \"None.Scans:2ef24ea08d4511e9acd9ac87a3187979\"\n",
        "| Column | Type | Nullable | Default | Comment |\n",
        "|--------|------|----------|---------|---------|\n",
        "| name   | text | True     | None    | None    |\n"
       ],
       "text/plain": [
-       "### Table \"None.Scans:f028b07282ab11e981c7320011066320\"\n",
+       "### Table \"None.Scans:2ef24ea08d4511e9acd9ac87a3187979\"\n",
        "| Column | Type | Nullable | Default | Comment |\n",
        "|--------|------|----------|---------|---------|\n",
        "| name   | text | True     | None    | None    |"
@@ -703,14 +703,14 @@
     {
      "data": {
       "text/markdown": [
-       "### Table \"None.Scans:f038b4f482ab11e981c7320011066320\"\n",
+       "### Table \"None.Scans:2efd4b7a8d4511e9acd9ac87a3187979\"\n",
        "| Column   | Type   | Nullable | Default | Comment |\n",
        "|----------|--------|----------|---------|---------|\n",
        "| name     | text   | True     | None    | None    |\n",
        "| synonyms | text\\[\\] | True     | None    | None    |\n"
       ],
       "text/plain": [
-       "### Table \"None.Scans:f038b4f482ab11e981c7320011066320\"\n",
+       "### Table \"None.Scans:2efd4b7a8d4511e9acd9ac87a3187979\"\n",
        "| Column   | Type   | Nullable | Default | Comment |\n",
        "|----------|--------|----------|---------|---------|\n",
        "| name     | text   | True     | None    | None    |\n",
@@ -825,10 +825,10 @@
      "data": {
       "text/plain": [
        "[{'name': 'Wild Type', 'synonyms': ['Wild Type']},\n",
-       " {'name': 'Wnt1', 'synonyms': ['Wnt4', 'Wnt10B', 'Wnt11', 'Wnt1']},\n",
+       " {'name': 'Wnt1', 'synonyms': ['Wnt4', 'Wnt10B', 'Wnt1', 'Wnt11']},\n",
        " {'name': 'Aplnr', 'synonyms': ['Aplnr']},\n",
        " {'name': 'Gdf15', 'synonyms': ['Gdf15']},\n",
-       " {'name': 'Ct24', 'synonyms': ['Ct22', 'Ct24']},\n",
+       " {'name': 'Ct24', 'synonyms': ['Ct24', 'Ct22']},\n",
        " {'name': 'Bleo', 'synonyms': ['Bleo']},\n",
        " {'name': 'Polycystin2', 'synonyms': ['Polycystin2']},\n",
        " {'name': 'Axin2', 'synonyms': ['Axin2']},\n",
@@ -839,7 +839,7 @@
        " {'name': 'Ndrg1', 'synonyms': ['Ndrg1']},\n",
        " {'name': 'C57Bl6', 'synonyms': ['C57Bl6', 'C57B6']},\n",
        " {'name': 'Blind', 'synonyms': ['Blind']},\n",
-       " {'name': 'Myc', 'synonyms': ['Myc', 'Mycn']},\n",
+       " {'name': 'Myc', 'synonyms': ['Mycn', 'Myc']},\n",
        " {'name': 'Trpv4', 'synonyms': ['Trpv4']},\n",
        " {'name': 'Apela', 'synonyms': ['Apela']},\n",
        " {'name': 'Krt20', 'synonyms': ['Krt20']},\n",
@@ -847,13 +847,13 @@
        " {'name': 'Crlf1', 'synonyms': ['Crlf1']},\n",
        " {'name': 'Lfng', 'synonyms': ['Lfng']},\n",
        " {'name': 'Gfra3', 'synonyms': ['Gfra3']},\n",
-       " {'name': 'Smek1', 'synonyms': ['Smek1', 'Smek2']},\n",
+       " {'name': 'Smek1', 'synonyms': ['Smek2', 'Smek1']},\n",
        " {'name': 'Ryk', 'synonyms': ['Ryk']},\n",
        " {'name': 'Six1', 'synonyms': ['Six1', 'Six2']},\n",
        " {'name': 'tOGL', 'synonyms': ['tOGL']},\n",
        " {'name': 'GM13398', 'synonyms': ['GM13398']},\n",
-       " {'name': 'Admts18', 'synonyms': ['Admts18', 'Adamts18']},\n",
-       " {'name': 'Foxd1', 'synonyms': ['Hoxd11', 'Foxd1']},\n",
+       " {'name': 'Admts18', 'synonyms': ['Adamts18', 'Admts18']},\n",
+       " {'name': 'Foxd1', 'synonyms': ['Foxd1', 'Hoxd11']},\n",
        " {'name': 'Hs3st3a1', 'synonyms': ['Hs3st3a1']},\n",
        " {'name': 'Kdm2b', 'synonyms': ['Kdm2b']},\n",
        " {'name': 'Swiss Webster', 'synonyms': ['Swiss (Webster)', 'Swiss Webster']},\n",
@@ -888,7 +888,7 @@
        " {'name': 'Ntrk2', 'synonyms': ['Ntrk2']},\n",
        " {'name': 'Tinag1', 'synonyms': ['Tinag1']},\n",
        " {'name': 'Sp7', 'synonyms': ['Sp7']},\n",
-       " {'name': 'Fzd2', 'synonyms': ['Fzd2', 'Fzd7']},\n",
+       " {'name': 'Fzd2', 'synonyms': ['Fzd7', 'Fzd2']},\n",
        " {'name': 'Ror2c', 'synonyms': ['Ror2c']},\n",
        " {'name': 'Pax2', 'synonyms': ['Pax2']},\n",
        " {'name': 'Cdh5', 'synonyms': ['Cdh5']}]"
@@ -967,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
